--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel *.html --open"
+    "start": "parcel *.html --open",
+    "build": "parcel build *.html --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/md2eoseo/workingwithparcel#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "parcel-plugin-static-files-copy": "^2.3.1"
   }
 }
