--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/md2eoseo/workingwithparcel#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.3"
   },
   "dependencies": {
     "parcel-plugin-static-files-copy": "^2.3.1"
